# BitBlast

./: .gitignore  README.md  setup.cfg
Benchmark/ext-plant-watering/instances/: domain.pddl
OUTPUT/: compiled_dom.pddl  compiled_prob.pddl
benchmark/Delivery/instances/: domain.pddl  pfile1.pddl
benchmark/Watering/instances/: pfile1.pddl
bitblast/: axioms_compilation.py  base_compilation.py  canonical_linear_expression.py  full_adder.py  normalization.py  sequence_compilation.py  shortcuts.py  unitary_compilation.py  utils.py
bitblast/helpers/: __init__.py  actions_helper.py  conditions_helper.py  full_adder.py  full_adder_helper.py  shortcuts.py  sympy_helper.py  utils.py
demo/: demo.ipynb
ncocoa/: grounding.py  simple_compilation.py
test/: test_action_conversion.py  test_axioms_compilation.py  test_bitblasted_initial_state.py  test_canonical_expression.py  test_cocoa.py  test_compilation.py  test_conditions_conversion.py  test_effect_conversion.py  test_full_adder.py  test_grounding.py  test_metric.py  test_normalization.py  test_sequence_compilation.py  test_simple_compilation.py  test_sympy_operations.py  test_unitary_compiler.py
test/pddl/counters/: instance_4.pddl
test/pddl/drone/: domain.pddl
test/pddl/farmland/: problem.pddl
test/pddl/mistery_ground/: domain.pddl  problem.pddl
test/pddl/rovers/: domain.pddl  pfile1.pddl
test/pddl/sailing-condeffs/: domain.pddl  instance_1_1_1229.pddl
test/pddl/satellite/: domain.pddl  pfile1.pddl
test/pddl/simple/: domain.pddl  domain_compiled.pddl  problem.pddl  problem_compiled.pddl  sas_plan
(+7 files in other folders)
