[metadata]
name=ncocoa
author=Anonymous
version = 0.1
description = COCOA for numeric planning
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords = conditional-effects numeric-planning

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires = 

python_requires= >=3.7

[options.package_data]
* = *.txt, *.md

[options.packages.find]
include =
    ncocoa*
exclude =

[bdist_wheel]
universal = 1
