[metadata]
name=bitblast
author=Anonymous
version = 0.1
description = bitblast
long_description = file: README.md
long_description_content_type = "text/markdown"
keywords = bitblast

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires = 

python_requires= >=3.7

[options.package_data]
* = *.txt, *.md

[options.packages.find]
include =
    bitblast*
exclude =

[bdist_wheel]
universal = 1
